Revert "overflow fix 3"
This reverts commit d5b7cbd8cd105c13b2bc93257bffcddaaf4c96c6.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,13 +9,7 @@
   }
 
   body {
-    @apply bg-gray-800 text-gray-200;
-  }
-
-  html,
-  body {
-    max-width: 100vw;
-    overflow-x: hidden;
+    @apply overflow-x-hidden bg-gray-800 text-gray-200;
   }
 }
 
